--- a/evaluationserver/Dockerfile
+++ b/evaluationserver/Dockerfile
@@ -1,7 +1,8 @@
 FROM getaviz/evaluationserver-base:1.3.2
-WORkDIR /usr/src/app/
+WORKDIR /usr/src/app/
 COPY Gemfile .
 COPY Gemfile.lock .
+COPY wait-for-it.sh ./wait-for-it.sh
 RUN bundle install --jobs 20 --retry 5 && gem install bundler
 COPY . .
 LABEL maintainer="david.baum@uni-leipzig.de" \
