--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "typeahead.js": "0.10.5",
     "handlebars": "2.0.0",
     "x3dom": "1.7.0",
-    "aframe-orbit-camera-component": "1.1.0"
+    "aframe-orbit-camera-component": "1.1.0",
+    "chroma-js": "2.1.1"
   }
 }
